--- a/cece.ioc
+++ b/cece.ioc
@@ -14,13 +14,14 @@ Mcu.Family=STM32F4
 Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=TIM4
-Mcu.IP6=TIM8
-Mcu.IP7=TIM9
-Mcu.IP8=TIM12
-Mcu.IPNb=9
+Mcu.IP3=SPI3
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=TIM4
+Mcu.IP7=TIM8
+Mcu.IP8=TIM9
+Mcu.IP9=TIM12
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE5
@@ -32,9 +33,13 @@ Mcu.Pin13=PC6
 Mcu.Pin14=PC7
 Mcu.Pin15=PA13
 Mcu.Pin16=PA14
-Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin18=VP_SYS_VS_tim6
+Mcu.Pin17=PA15
+Mcu.Pin18=PC10
+Mcu.Pin19=PC11
 Mcu.Pin2=PH0-OSC_IN
+Mcu.Pin20=PC12
+Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin22=VP_SYS_VS_tim6
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -42,7 +47,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PD12
-Mcu.PinsNb=19
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -73,6 +78,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=PA15-PS2_CS
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=PA2-TIM23-M0_OUTA
 PA2.Signal=S_TIM2_CH3
@@ -85,6 +94,12 @@ PB14.Signal=S_TIM12_CH1
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=PB15-TIM122-SERVO
 PB15.Signal=S_TIM12_CH2
+PC10.Mode=Full_Duplex_Master
+PC10.Signal=SPI3_SCK
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=SPI3_MISO
+PC12.Mode=Full_Duplex_Master
+PC12.Signal=SPI3_MOSI
 PC6.Signal=S_TIM8_CH1
 PC7.Signal=S_TIM8_CH2
 PD12.GPIOParameters=GPIO_Label
@@ -197,6 +212,14 @@ SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
 SH.S_TIM9_CH1.ConfNb=1
 SH.S_TIM9_CH2.0=TIM9_CH2,PWM Generation2 CH2
 SH.S_TIM9_CH2.ConfNb=1
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI3.CLKPolarity=SPI_POLARITY_HIGH
+SPI3.CalculateBaudRate=164.062 KBits/s
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.FirstBit=SPI_FIRSTBIT_LSB
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,FirstBit
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 TIM12.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
